argo-events/templates/argo-events-webhook/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:eu-central-1:116911669293:certificate/fffbf1be-d11c-4ba0-9c59-3d985bc6f560
    alb.ingress.kubernetes.io/group.name: healios-nexus-ops-test
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS": 443}]'
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/ssl-redirect: "443"
    alb.ingress.kubernetes.io/tags: Name=healios-nexus-ops-test
    alb.ingress.kubernetes.io/target-type: ip
    kubernetes.io/ingress.class: alb
  name: argo-events-webhook-server
  namespace: argo
spec:
  rules:
  - host: events-webhook.ops-test.healios.care
    http:
      paths:
      - backend:
          service:
            name: events-webhook
            port:
              number: 443
        pathType: ImplementationSpecific
